--- a/.gitignore
+++ b/.gitignore
@@ -17,24 +17,64 @@
 mono_crash.*
 
 # Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-[Ww][Ii][Nn]32/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
-[Aa][Rr][Mm]64[Ee][Cc]/
-bld/
 [Bb]in/
 [Oo]bj/
-[Oo]ut/
-[Ll]og/
-[Ll]ogs/
+x64/
+x86/
+Debug/
+Release/
+build/
+out/
+
+# CMake
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+
+# Compiled object files
+*.obj
+*.o
+*.lo
+*.ilk
+*.pdb
+*.idb
+*.class
+*.exe
+*.dll
+*.lib
+*.a
+*.so
+*.dylib
+*.exp
+
+# VS specific
+.vs/
+*.VC.db
+*.VC.opendb
+*.sdf
+*.ipch
+*.cache
+
+# Logs and databases
+*.log
+*.tlog
+
+# Crash dumps
+*.mdmp
+
+# Backup files
+*.bak
+*.old
+*.orig
+
+# Temporary files
+*.tmp
+*.swp
+*~
 
 # Visual Studio 2015/2017 cache/options directory
+# (залишено з початкової версії)
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
@@ -360,47 +400,4 @@ ASALocalRun/
 # AWS SAM Build and Temporary Artifacts folder
 .aws-sam
 
-# NVidia Nsight GPU debugger configuration file
-*.nvuser
-
-# MFractors (Xamarin productivity tool) working folder
-.mfractor/
-
-# Local History for Visual Studio
-.localhistory/
-
-# Visual Studio History (VSHistory) files
-.vshistory/
-
-# BeatPulse healthcheck temp database
-healthchecksdb
-
-# Backup folder for Package Reference Convert tool in Visual Studio 2017
-MigrationBackup/
-
-# Ionide (cross platform F# VS Code tools) working folder
-.ionide/
-
-# Fody - auto-generated XML schema
-FodyWeavers.xsd
-
-# VS Code files for those working on multiple tools
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
-
-# Local History for Visual Studio Code
-.history/
-
-# Windows Installer files from build outputs
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# JetBrains Rider
-*.sln.iml
+# NV
