Видалено службові файли VS з індексу та оновлено .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,12 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+Observer_SOLID/.vs/
+*.suo
+*.VC.db
+*.ipch
+*.user
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
